🐛 BUG: Specified z-index in user-badge component

--- a/frontend/src/app/user-badge/user-badge.component.scss
+++ b/frontend/src/app/user-badge/user-badge.component.scss
@@ -15,6 +15,7 @@
         width: max-content;
     }
     transition: 0.1s;
+    z-index: 49;
 }
 
 .badge,
